# bespoke

./: .gitignore  LICENSE  README.md  pyproject.toml
data/results/: _multi_window_full_20260415_220709.json
data/strategy/losing/: activist_distressed_20260412_190353.json  activist_distressed_20260412_190353.md  africa_frontier_20260413_134756.json  africa_frontier_20260413_134756.md  aging_population_20260408_155019.json  aging_population_20260408_155019.md  agriculture_food_20260412_190309.json  agriculture_food_20260412_190309.md  ai_application_survivors_20260412_190127.json  ai_application_survivors_20260412_190127.md  all_weather_modern_20260408_230405.json  all_weather_modern_20260408_230405.md  beaten_down_staples_20260412_190157.json  beaten_down_staples_20260412_190157.md  benjamin_graham_20260412_190644.json  benjamin_graham_20260412_190644.md  billboard_monopoly_20260408_220423.json  billboard_monopoly_20260408_220423.md  bond_duration_trade_20260413_134753.json  bond_duration_trade_20260413_134753.md  bond_fixed_income_20260408_230417.json  bond_fixed_income_20260408_230417.md  bonds_down_banks_up_20260408_223953.json  bonds_down_banks_up_20260408_223953.md  boring_compounder_20260408_230207.json  boring_compounder_20260408_230207.md  cannabis_alt_consumer_20260408_230259.json  cannabis_alt_consumer_20260408_230259.md  china_tech_rebound_20260408_225721.json  china_tech_rebound_20260408_225721.md  clean_energy_20260412_190017.json  clean_energy_20260412_190017.md  cloud_cyber_value_20260408_225839.json  cloud_cyber_value_20260408_225839.md  cointegration_pairs_20260412_190456.json  cointegration_pairs_20260412_190456.md  commodity_supercycle_20260412_190326.json  commodity_supercycle_20260412_190326.md  constellation_contrarian_20260412_190210.json  constellation_contrarian_20260412_190210.md  (+192 more)
data/strategy/winning/: accruals_quality_20260413_194628.json  accruals_quality_20260413_194628.md  activist_distressed_20260408_230719.json  activist_distressed_20260408_230719.md  adaptive_ensemble_20260412_190247.json  adaptive_ensemble_20260412_190247.md  (+418 more)
src/bespoke/: __init__.py
src/bespoke/cli/: main.py  (+1 more)
tests/: test_analysis.py  test_cli.py  test_core.py  test_data.py  test_strategies.py
(+50 files in other folders)
