[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bespoke"
version = "0.1.0"
description = "Bespoke trading strategy library — backtest, compare, and build custom strategies"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Liling Tan", email = "alvations@gmail.com"},
]
keywords = ["trading", "backtesting", "strategy", "finance", "quantitative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff"]
all = ["bespoke[dev]"]

[project.urls]
Homepage = "https://github.com/alvations/bespoke"
Repository = "https://github.com/alvations/bespoke"
Issues = "https://github.com/alvations/bespoke/issues"

[project.scripts]
bespoke = "bespoke.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bespoke"]

[tool.pytest.ini_options]
testpaths = ["tests"]
